Edited wiki page through web user interface.

--- a/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
+++ b/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
@@ -1,14 +1,165 @@
-#summary One-sentence summary of this page.
 #labels OpenERPBook,Translation
+== Open ERP Book==
 
-= Introduction =
+   * [http://www.shine-it.net Foreword]
+    * [http://www.shine-it.net Open Source software at the service of management]
+    * [http://www.shine-it.net The Open ERP Solution]
+     * [http://www.shine-it.net Why this book?]
+     * [http://www.shine-it.net Who’s it for?]
+     * [http://www.shine-it.net Structure of this book]
+     * [http://www.shine-it.net Thanks]
 
-Add your content here.
+   * [http://www.shine-it.net First steps with Open ERP]
+    * [http://www.shine-it.net Installation and Configuration]
+     * [http://www.shine-it.net The architecture of Open ERP]
+     * [http://www.shine-it.net The installation of Open ERP]
+     * [http://www.shine-it.net Database creation]
+    * [http://www.shine-it.net Guided Tour]
+     * [http://www.shine-it.net Database creation]
+     * [http://www.shine-it.net To connect to Open ERP]
+     * [http://www.shine-it.net Installing new functionality]
+     * [http://www.shine-it.net Guided Tour of Open ERP]
+    * [http://www.shine-it.net Developing a real case from purchase to sale: a complete workflow]
+     * [http://www.shine-it.net Use case]
+     * [http://www.shine-it.net Functional requirements]
+     * [http://www.shine-it.net Database creation]
+     * [http://www.shine-it.net Installing and configuring modules]
+     * [http://www.shine-it.net Database setup]
+     * [http://www.shine-it.net Testing a Purchase-Sale workflow]
 
+   * [http://www.shine-it.net Managing Customer Relationships]
+    * [http://www.shine-it.net Customer Relationship Management]
+     * [http://www.shine-it.net Open ERP preparation]
+     * [http://www.shine-it.net Partners]
+     * [http://www.shine-it.net Case management]
+     * [http://www.shine-it.net Profiling]
+    * [http://www.shine-it.net Leads, Business Opportunities and Campaigns]
+     * [http://www.shine-it.net Managing Contacts]
+     * [http://www.shine-it.net Leads]
+    * [http://www.shine-it.net Communication Tools]
+     * [http://www.shine-it.net Open ERP preparation]
+     * [http://www.shine-it.net Microsoft Outlook interface]
+     * [http://www.shine-it.net Mozilla Thunderbird interface]
+     * [http://www.shine-it.net Microsoft Word interface]
 
-= Details =
+   * [http://www.shine-it.net General Accounting]
+    * [http://www.shine-it.net From invoice to payment]
+     * [http://www.shine-it.net Open ERP preparation]
+     * [http://www.shine-it.net Accounting workflow and the automatic generation of invoices]
+     * [http://www.shine-it.net Invoicing]
+     * [http://www.shine-it.net Accounting entries]
+     * [http://www.shine-it.net Management of payments]
+    * [http://www.shine-it.net Financial Analysis]
+     * [http://www.shine-it.net Managing accounts payable / creditors and accounts receivable / debtors]
+     * [http://www.shine-it.net Statutory taxes and accounts]
+     * [http://www.shine-it.net Company Financial Analysis]
+    * [http://www.shine-it.net The A to Z of Configuring Accounts]
+     * [http://www.shine-it.net Chart of Accounts]
+     * [http://www.shine-it.net Journals]
+     * [http://www.shine-it.net Periods and fiscal years]
+     * [http://www.shine-it.net Payment Terms]
+     * [http://www.shine-it.net Entries at the start of a year]
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+   * [http://www.shine-it.net Managing your company effectively]
+    * [http://www.shine-it.net Analytic Accounts]
+     * [http://www.shine-it.net To each enterprise its own analytic chart]
+     * [http://www.shine-it.net Putting analytic accounts in place]
+     * [http://www.shine-it.net Analytic records]
+     * [http://www.shine-it.net Financial Analysis]
+    * [http://www.shine-it.net Organization of Human Resources]
+     * [http://www.shine-it.net Managing Human Resources]
+     * [http://www.shine-it.net Timesheets]
+    * [http://www.shine-it.net The Management of Services]
+     * [http://www.shine-it.net Managing Service Contracts]
+     * [http://www.shine-it.net Planning that improves leadership]
+     * [http://www.shine-it.net Treatment of expenses]
+    * [http://www.shine-it.net Internal organization and project management]
+     * [http://www.shine-it.net Project management]
+     * [http://www.shine-it.net The art of productivity without stress]
+
+   * [http://www.shine-it.net Stock and Manufacturing]
+    * [http://www.shine-it.net Logistics and Stock Management]
+     * [http://www.shine-it.net Understanding double-entry stock management]
+     * [http://www.shine-it.net Complete workflow from supplier to customer]
+     * [http://www.shine-it.net Stocks]
+     * [http://www.shine-it.net Logistics Configuration]
+     * [http://www.shine-it.net Import / Export]
+     * [http://www.shine-it.net Warehouses]
+     * [http://www.shine-it.net Scheduling]
+     * [http://www.shine-it.net Management of lots and traceability]
+     * [http://www.shine-it.net Management by Journal]
+     * [http://www.shine-it.net Advanced elements of stock management]
+    * [http://www.shine-it.net Production Management]
+     * [http://www.shine-it.net Management of production]
+     * [http://www.shine-it.net Calculation of lead times]
+     * [http://www.shine-it.net Operations]
+     * [http://www.shine-it.net Scores, events and barcodes]
+     * [http://www.shine-it.net Treatment of exceptions]
+     * [http://www.shine-it.net Manual procurement]
+     * [http://www.shine-it.net Management of waste products and secondary products]
+     * [http://www.shine-it.net Management of repairs]
+
+   * [http://www.shine-it.net Sales and Purchase]
+    * [http://www.shine-it.net Management of Sales]
+     * [http://www.shine-it.net Estimation of the order]
+     * [http://www.shine-it.net Entering Quotation details]
+     * [http://www.shine-it.net Example Packing and different products]
+     * [http://www.shine-it.net Configuration of orders]
+     * [http://www.shine-it.net Packing mode]
+     * [http://www.shine-it.net Using delivery modes]
+     * [http://www.shine-it.net Delivery based on the order]
+     * [http://www.shine-it.net Delivery based on the packed items]
+     * [http://www.shine-it.net Margins on sales orders]
+     * [http://www.shine-it.net Margins by product]
+     * [http://www.shine-it.net Margins by Project]
+     * [http://www.shine-it.net Creating pricelists]
+    * [http://www.shine-it.net Pricelist versions]
+    * [http://www.shine-it.net Rules for calculating price]
+     * [http://www.shine-it.net Case of using pricelists]
+    * [http://www.shine-it.net Default pricelists]
+    * [http://www.shine-it.net Example of a trading company]
+    * [http://www.shine-it.net Establishing customer contract conditions]
+     * [http://www.shine-it.net Different bases for price calculation]
+     * [http://www.shine-it.net Pricelists and managing currencies]
+     * [http://www.shine-it.net Example: Using returns for the end of a campaign]
+     * [http://www.shine-it.net Open orders]
+    * [http://www.shine-it.net Purchase Management]
+     * [http://www.shine-it.net A complete workflow]
+     * [http://www.shine-it.net Analyis of purchases]
+     * [http://www.shine-it.net Supplier relationship management]
+     * [http://www.shine-it.net Analytic accounts]
+
+   * [http://www.shine-it.net Process and Document Management]
+    * [http://www.shine-it.net Process]
+     * [http://www.shine-it.net The integration of processes into the management system]
+     * [http://www.shine-it.net Workflows and User Processes]
+    * [http://www.shine-it.net Integrated Document Management]
+     * [http://www.shine-it.net The importance of good document management]
+     * [http://www.shine-it.net Classic document management solutions]
+     * [http://www.shine-it.net The Open ERP solution]
+     * [http://www.shine-it.net Installation]
+     * [http://www.shine-it.net Internal and external access using FTP]
+     * [http://www.shine-it.net Mapping between Open ERP resources and directories]
+     * [http://www.shine-it.net Managing Attachments]
+     * [http://www.shine-it.net Virtual Files]
+     * [http://www.shine-it.net Standardizing Structures]
+     * [http://www.shine-it.net Searching for documents]
+
+   * [http://www.shine-it.net System Administration and Implementation]
+    * [http://www.shine-it.net Personalizing and Administering Open ERP]
+     * [http://www.shine-it.net Creating a Configuration Module]
+     * [http://www.shine-it.net Personalizing the menu]
+     * [http://www.shine-it.net Managing access rights]
+     * [http://www.shine-it.net Groups and Users]
+     * [http://www.shine-it.net Configuring workflows]
+     * [http://www.shine-it.net Configuring reports]
+     * [http://www.shine-it.net Importing and exporting data]
+    * [http://www.shine-it.net Implementation Methodology]
+     * [http://www.shine-it.net Requirements Analysis and Planning]
+     * [http://www.shine-it.net Deployment]
+     * [http://www.shine-it.net User training]
+     * [http://www.shine-it.net Support and maintenance]
+
+   * [http://www.shine-it.net Conclusion]
+    * [http://www.shine-it.net You aren’t alone]
+     * [http://www.shine-it.net Consult the available resources]
