Edited wiki page through web user interface.

--- a/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
+++ b/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
@@ -1,31 +1,31 @@
 #labels OpenERPBook,Translation
 == Open ERP Book==
 
-   * [http://www.shine-it.net Foreword]
-    * [http://www.shine-it.net Open Source software at the service of management]
-    * [http://www.shine-it.net The Open ERP Solution]
-     * [http://www.shine-it.net Why this book?]
-     * [http://www.shine-it.net Who’s it for?]
-     * [http://www.shine-it.net Structure of this book]
-     * [http://www.shine-it.net Thanks]
+   * [http://www.shine-it.net Foreward前言]
+    * [http://www.shine-it.net Open Source software at the service of management管理服务的开源软件]
+    * [http://www.shine-it.net The Open ERP Solution OpenERP解决方案]
+     * [http://www.shine-it.net Why this book? 本书的目的]
+     * [http://www.shine-it.net Who’s it for? 本书的读者]
+     * [http://www.shine-it.net Structure of this book 本书的结构]
+     * [http://www.shine-it.net Thanks 感谢]
 
-   * [http://www.shine-it.net First steps with Open ERP]
-    * [http://www.shine-it.net Installation and Configuration]
-     * [http://www.shine-it.net The architecture of Open ERP]
-     * [http://www.shine-it.net The installation of Open ERP]
-     * [http://www.shine-it.net Database creation]
-    * [http://www.shine-it.net Guided Tour]
-     * [http://www.shine-it.net Database creation]
-     * [http://www.shine-it.net To connect to Open ERP]
-     * [http://www.shine-it.net Installing new functionality]
-     * [http://www.shine-it.net Guided Tour of Open ERP]
-    * [http://www.shine-it.net Developing a real case from purchase to sale: a complete workflow]
-     * [http://www.shine-it.net Use case]
-     * [http://www.shine-it.net Functional requirements]
-     * [http://www.shine-it.net Database creation]
-     * [http://www.shine-it.net Installing and configuring modules]
-     * [http://www.shine-it.net Database setup]
-     * [http://www.shine-it.net Testing a Purchase-Sale workflow]
+   * [http://www.shine-it.net First steps with Open ERP 初探OpenERP]
+    * [http://www.shine-it.net Installation and Configuration 安装和配置]
+     * [http://www.shine-it.net The architecture of Open ERP OpenERP的结构]
+     * [http://www.shine-it.net The installation of Open ERP OpenERP的安装]
+     * [http://www.shine-it.net Database creation 建立数据库]
+    * [http://www.shine-it.net Guided Tour 向导]
+     * [http://www.shine-it.net Database creation 建立数据库]
+     * [http://www.shine-it.net To connect to Open ERP 连接到OpenERP]
+     * [http://www.shine-it.net Installing new functionality 安装新功能]
+     * [http://www.shine-it.net Guided Tour of Open ERP OpenERP向导]
+    * [http://www.shine-it.net Developing a real case from purchase to sale: a complete workflow 从购到销的一个真实案例：一个完整的工作流]
+     * [http://www.shine-it.net Use case 案例]
+     * [http://www.shine-it.net Functional requirements 功能需求]
+     * [http://www.shine-it.net Database creation 建立数据库]
+     * [http://www.shine-it.net Installing and configuring modules 安装配置模块]
+     * [http://www.shine-it.net Database setup 装载数据库]
+     * [http://www.shine-it.net Testing a Purchase-Sale workflow 测试购销工作流]
 
    * [http://www.shine-it.net Managing Customer Relationships]
     * [http://www.shine-it.net Customer Relationship Management]
