Edited wiki page through web user interface.

--- a/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
+++ b/wiki/OpenERP_Book_Sim_Chinese_Translation.wiki
@@ -27,15 +27,15 @@
      * [http://www.shine-it.net Database setup 装载数据库]
      * [http://www.shine-it.net Testing a Purchase-Sale workflow 测试购销工作流]
 
-   * [http://www.shine-it.net Managing Customer Relationships]
-    * [http://www.shine-it.net Customer Relationship Management]
-     * [http://www.shine-it.net Open ERP preparation]
-     * [http://www.shine-it.net Partners]
-     * [http://www.shine-it.net Case management]
-     * [http://www.shine-it.net Profiling]
-    * [http://www.shine-it.net Leads, Business Opportunities and Campaigns]
-     * [http://www.shine-it.net Managing Contacts]
-     * [http://www.shine-it.net Leads]
+   * [http://www.shine-it.net Managing Customer Relationships 管理客户关系]
+    * [http://www.shine-it.net Customer Relationship Management 客户关系管理]
+     * [http://www.shine-it.net Open ERP preparation 准备OpenERP]
+     * [http://www.shine-it.net Partners 合作者]
+     * [http://www.shine-it.net Case management 商案管理]
+     * [http://www.shine-it.net Profiling 概要预测]
+    * [http://www.shine-it.net Leads, Business Opportunities and Campaigns 商机与活动]
+     * [http://www.shine-it.net Managing Contacts 管理联系]
+     * [http://www.shine-it.net Leads 潜在商机]
     * [http://www.shine-it.net Communication Tools]
      * [http://www.shine-it.net Open ERP preparation]
      * [http://www.shine-it.net Microsoft Outlook interface]
